# cryptoMAS

./: .gitignore  README.md  pyproject.toml
diagrams/: .$flow.drawio.bkp  flow.drawio
environ/agents/: __init__.py  base.py  crypto_agent.py  news_agent.py  rag_crypto_agent.py  single_agent.py  skill_crypto_agent.py  trading_agent.py
environ/architectures/: __init__.py  ablation.py  base_arch.py  collaborative.py  debate.py  hierarchical.py
environ/evaluation/: __init__.py  metrics.py  plots.py
scripts/: benchmarks.py  estimate_cost.py  evaluate.py  fetch_news.py  run_ablation.py  run_experiment.py
tables/: ablation.tex  performance.tex
